additionController created and registered

--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
-<html>
-//below is a script to use angular js
+<html ng-app="myAppModule">
+<!--below is a script to use angular js-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="js/app-module.js"></script>
 <body>
 
-    <div ng-app="myApp" ng-controller="myCtrl">
-
-        First Name: <input type="text" ng-model="firstName"><br>
-        Last Name: <input type="text" ng-model="lastName"><br>
-        <br>
-        Full Name: {{firstName + " " + lastName}}
-
+    <div ng-controller="additionController">
+            {{message}}
     </div>
-
-    <script>
-        var app = angular.module('myApp', []);
-        app.controller('myCtrl', function($scope) {
-            $scope.firstName = "John";
-            $scope.lastName = "Doe";
-        });
-    </script>
-
 </body>
 </html>
