--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         <p>Average markes {{sum/3 | number:4}} rounded off to 4 decimal places</p>
     </div>
 
+    <div ng-controller="hexadController">
+        <p>
+            Service for convering numbers to hexadecimal in this case the number is 54075347
+        </p>
+        {{hex}}
+    </div>
+
 </body>
 </html>
