todo list created

--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html ng-app = "myAppModule">
-<!--below is a script to use angular js-->
-<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src = "js/app-module.js"></script>
-<body ng-controller = "additionController">
-
-    <div>
-        {{message}} <br>
-        <p> Using filters to convert, this is the message from the controller - {{message | uppercase}}</p>
+<html lang = "en">
+<head>
+    <meta charset = "UTF-8">
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src = "js/todo.js"></script>
+    <title>Angular Todo List</title>
+</head>
+<body>
+    <div ng-app="todoListApp" ng-controller="todoController">
+        <form ng-submit="addTask()">
+            <input type = "text" placeholder="Add New Task" ng-model="title">
+            <button>Add</button>
+        </form>
+        <ul>
+            <li ng-repeat="task in tasks track by $index">{{task}} &nbsp; <button ng-click="deleteTask()">Delete</button></li>
+        </ul>
     </div>
-
-    <div>
-        <p>You scored total marks = {{sum}} </p>
-        <p>Average markes {{sum/3 | number:4}} rounded off to 4 decimal places</p>
-    </div>
-
-    <div ng-controller = "hexadController">
-        <p>
-            Service for convering numbers to hexadecimal in this case the number is 54075347
-        </p>
-        {{hex}}
-    </div>
-
 </body>
 </html>
